# d-cam

./: .gitignore  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/droidcam/: CameraModule.kt  Config.kt  EncoderModule.kt  MainActivity.kt  NetworkModule.kt
android/app/src/main/res/values/: strings.xml
desktop/: CMakeLists.txt
desktop/src/: Config.h  IPCServer.h  main.cpp
obs-plugin/: CMakeLists.txt
obs-plugin/src/: Config.h  plugin-main.c
